# hive

./: .gitignore  .sops.yaml  README.md  colmena.nix  default.nix  hive.nix  shell.nix  upgrade.sh
.github/workflows/: deploy.yml  npins.yaml
home/: default.nix
home/modules/: git.nix  nvim.nix
home/profiles/: work.nix
hosts/astrid/: default.nix  fonts.nix  hardware-configuration.nix  nixos.nix  services.nix  wemux.nix  wm.nix
hosts/athena/: aconite.nix  archive.nix  authentik.nix  bird.conf  default.nix  dial.nix  fun.nix  hardware-configuration.nix  impermanence.nix  jellyfin.nix  matrix.nix  minecraft.nix  rutorrent.nix  skyfactory.nix  thelounge.nix  umaring.nix  www.nix
hosts/sasha/: captive-portals.nix  default.nix  fonts.nix  hardware-configuration.nix  nixos.nix  unbound.nix
hosts/zoe/: default.nix  home-assistant.nix  networking.nix
modules/certs/: estrogen-coffee.nix  hayl-in.nix  uwu-estate.nix
modules/nixos/: default.nix  dli-ddns.nix  dollpublish.nix  duckdns.nix  dynamic-dns.nix  ethtool.nix  (+3 more)
nix/: mono-module.nix
npins/: sources.json
pkgs/: arc.nix  cobalt.nix  libstdcpp5.nix  netscape-navigator.nix  overlays.nix  pangox32.nix  qvim.nix  tunnet.nix
python/: meshcore-cli.nix
secrets/: authentik.env  dns.env  dollpublish.json  navidrome.env  slskd.env
service/: default.nix  lib.nix  module.nix  wrapVirtualHost.nix
systems/: sasha.nix
tools/: infuse.nix  readTree.nix  treefmt.nix
web/: authentik.nix  default.nix  umaring.nix
web/dial/: Cargo.toml  default.nix  shell.nix
web/dial/src/: config.rs  dial.rs  main.rs  panel.rs
(+153 files in other folders)
