[package]
name = "dial"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["query" , "form"] }
chrono = "0.4.45"
maud = { version = "0.27.0", features = ["axum"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_repr = "0.1.20"
sled = "0.34.7"
tokio = { version = "1.52.3", features = ["full"] }
twiml-rust = "0.1.0"
