[package]
name = "dial"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["query" , "form"] }
base64 = "0.22.1"
chrono = "0.4.45"
hmac = "0.13.0"
maud = { version = "0.27.0", features = ["axum"] }
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_repr = "0.1.20"
sha1 = "0.11.0"
sled = "0.34.7"
tokio = { version = "1.52.3", features = ["full"] }
twiml-rust = "0.1.0"
